website/websites/u64q/code/knucleotide.1.pyston.log

 Sun, 06 Feb 2022 21:18:19 GMT

COMMAND LINE:
 /usr/bin/pyston knucleotide.pyston 0 < knucleotide-input10000.txt

PROGRAM FAILED 


PROGRAM OUTPUT:

  File "knucleotide.pyston", line 28
    print '\n'.join("%s %.3f" % (st, 100.0*fr/n) for st,fr in l)
          ^
SyntaxError: invalid syntax
